ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_read_timeout 300;
      proxy_connect_timeout 300;
      proxy_send_timeout 300;
spec:
  rules:
  - host: gitlab.debian
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: gitlab-webservice-default
            port:
              number: 8181
